force-app/main/default/objects/Product_Ownership_Detail__c/fields/Global_Contract__c.field-meta.xml
<CustomField>
    <fullName>Global_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked if the entitlement comes from a global contract.</description>
    <label>Global Contract</label>
    <type>Checkbox</type>
</CustomField>