force-app/main/default/objects/Product_Ownership_Detail__c/fields/License_Basis__c.field-meta.xml
<CustomField>
    <fullName>License_Basis__c</fullName>
    <label>License Basis (EXPIRING 3/8)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Additional Security Extensions</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Advanced - Cloud</fullName>
            </value>
            <value>
                <fullName>Advanced Security Package</fullName>
            </value>
            <value>
                <fullName>AI Module</fullName>
            </value>
            <value>
                <fullName>Assessment Module</fullName>
            </value>
            <value>
                <fullName>Attorney Acknowledgements</fullName>
            </value>
            <value>
                <fullName>Auditing Package</fullName>
            </value>
            <value>
                <fullName>CG Analyze</fullName>
            </value>
            <value>
                <fullName>CG Clear</fullName>
            </value>
            <value>
                <fullName>CG Flow</fullName>
            </value>
            <value>
                <fullName>CG Hold</fullName>
            </value>
            <value>
                <fullName>CG Lateral Hire</fullName>
            </value>
            <value>
                <fullName>CG Mobile</fullName>
            </value>
            <value>
                <fullName>CG Protect</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Confidentiality Package</fullName>
            </value>
            <value>
                <fullName>Confidentiality Plus</fullName>
                <label>Confidentiality Plus Package</label>
            </value>
            <value>
                <fullName>Connected (Including Quick Search &amp; IRC)</fullName>
            </value>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Criteria Based Access</fullName>
            </value>
            <value>
                <fullName>D&amp;B Company Profile &amp; Family Tree</fullName>
            </value>
            <value>
                <fullName>DMS Package</fullName>
            </value>
            <value>
                <fullName>Axiom</fullName>
                <label>DTE - Axiom</label>
            </value>
            <value>
                <fullName>Axiom Mobile</fullName>
                <label>DTE - Axiom Mobile</label>
            </value>
            <value>
                <fullName>Legacy DTE</fullName>
                <label>DTE - Legacy</label>
            </value>
            <value>
                <fullName>Legacy Mobile</fullName>
                <label>DTE - Legacy Mobile</label>
            </value>
            <value>
                <fullName>Dynamic Groups</fullName>
            </value>
            <value>
                <fullName>eBillingHub Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>