force-app/main/default/objects/Product_Ownership_Detail__c/fields/License_Basis_Entitled_To__c.field-meta.xml
<CustomField>
    <fullName>License_Basis_Entitled_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Basis Entitled To</label>
    <referenceTo>License_Basis__c</referenceTo>
    <relationshipLabel>Product Ownership Details (License Basis entitled to)</relationshipLabel>
    <relationshipName>Product_Ownership_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>