force-app/main/default/objects/Product_Ownership_Detail__c/fields/License_basis_link__c.field-meta.xml
<CustomField>
    <fullName>License_basis_link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Basis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>License_Basis__c.Product_Line__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product_line_link__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>License_Basis__c</referenceTo>
    <relationshipLabel>Product Ownership Details</relationshipLabel>
    <relationshipName>Product_Ownership_Details</relationshipName>
    <type>Lookup</type>
</CustomField>