force-app/main/default/objects/Product_Ownership_Detail__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <description>SC-000021</description>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUL/POE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>