force-app/main/default/objects/Product_Ownership_Detail__c/fields/Product_line_link__c.field-meta.xml
<CustomField>
    <fullName>Product_line_link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Line__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Product Ownership Details</relationshipLabel>
    <relationshipName>Product_Ownership_Details</relationshipName>
    <type>Lookup</type>
</CustomField>