force-app/main/default/objects/Product_Ownership_Detail__c/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (Silver)</fullName>
                <default>true</default>
                <label>Standard (Silver)</label>
            </value>
            <value>
                <fullName>Premium (Gold)</fullName>
            </value>
            <value>
                <fullName>Premium (Platinum)</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Gwabbit Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>